Frontend/styles.css
body {
    background-color: #334;
    color: white;
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

a{
    color: rgb(0, 255, 229);
}

.nav-bar-container {
    height: 60px;
}

.nav-bar-container h1 {
    font-family: Georgia, 'Times New Roman', Times, serif;
    margin-left: 50px;
}


/*

Login / Sign up pages

*/

.login-form-container {
    display: flex;
    width: 100%;
    margin-bottom: 100px;
    left: 0px;
    justify-content: center;
}

.login-form {
    box-shadow: 0px 8px 10px 10px rgba(0,0,0,0.1);
    border-radius: 20px;
    background-color: #558;
    display: flex;
    padding: 50px;
    margin-top: 100px;
}

.login-row-title {
    font-size: 40px;
    color: #fff;
    width: 100%;
    margin-top: 30px;
    margin-bottom: 20px;
}

.login-input-row {
    width: 550px;
    background: rgba(0,0,30,0.3);
    height: 100px;
    margin-bottom: 30px;
    border-radius: 15px;
    display: flex;
    flex-direction: column;
    padding-top: 30px; 
    box-shadow: 0px 0px 2px 2px rgba(0,0,0,0.1);
}

.login-text-inputs {
    border: none;
    width: calc(100% - 60px);
    height: 30px;
    margin-left: 48px;
    color: white;
    background-color: transparent;
    font-size: 15px;
    font-weight: bold;
    transition: height .5s, font-size .5s;
    transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
}

.login-text-inputs:focus {
    height: 40px;
    font-size: 20px;
}


.login-label {
    font-weight: lighter;
    font-family: Arial, Helvetica, sans-serif;
    color: #eee;
    padding-left: 50px;
    padding-top: 10px;
    padding-bottom: 10px;
}

.login-title {
    font-weight: bold;
    font-size: 60px;
    /* line-height: 10px; */
    margin-bottom: 100px;
    margin-top: 100px;
    font-family: Georgia, 'Times New Roman', Times, serif;
    text-align: center;
}

.login-signup {
    color: #ddd;
    font-size: 12px;
    width: 100%;
    text-align: center;
}

.login-button {
    font-size: 20px;
    width: 250px;
    margin-left: calc(50% - 125px);
    height: 80px;
    color: black;
    background-color: rgb(0, 255, 229);
    border: none;
    border-radius: 25px;
    margin-top: 20px;
    box-shadow: 0px 2px 5px 5px rgba(0,0,0,0.1);
}

.login-button:hover {
    background-color: rgb(160, 255, 245);
    cursor: pointer;
}

.login-forgot-password {
    color: rgb(0, 255, 229);
    font-size: 12px;
    width: 100%;
    margin-bottom: 50px;
    text-align: center;
}

.login-description {
    color: #ddd;
    font-size: 12px;
    width: 100%;
    margin-bottom: 50px;
}

/* 

footer

*/

.footer {
    display: block;
    width: calc(100% - 100px);
    position: absolute;
    left: 0px;
    padding: 50px 50px 10px 50px;
    background-color: rgba(0,0,0,0.2);
}


/*

settings pages (formally my profile)

*/

.settings-container {
    display: flex;
    flex-direction: row;
}

.settings-navigation {
    width: 30%;
    min-width: 200px;
    background-color: #558;
    display: flex;
    flex-direction: column;
    align-items:flex-end;
    box-shadow: 5px 0px 5px 5px rgba(0,0,0,0.1);
    min-height: calc(100vh - 265px);
}

.settings-navigation-label {
    font-weight: bold;
    text-align: left;
    padding: 5px;
    font-size: 16px;
    width: 170px;
    margin-top: 50px;
    margin-bottom: 10px;
    margin-right: 10px;
}

.settings-navigation-options {
    text-align: left;
    padding: 5px;
    font-size: 15px;
    color: #ccc;
    width: 170px;
    margin-right: 10px;
    padding-left: 20px;
    border-radius: 10px;
    margin-top: 5px;
    padding-top: 8px;
    padding-bottom: 8px;
}

.settings-navigation-options:hover {
    background-color: rgba(0,0,0,0.1);
    color: #fff;
    cursor: pointer;
}

.selected {
    background-color: rgba(0,0,0,0.2);
    color: #fff;
    box-shadow: 0px 0px 2px 2px rgba(0,0,0,0.05);
}

.settings-container {
    /* border: 1px solid red;
    height: 200%; */
}

.settings-pane {
    padding-left: 100px;
    padding-bottom: 100px;
}

.settins-pane-title {
 font-weight: bold;
}

.settings-coloumns-container {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.settings-profile-picture {
    width: 100px;
    height: 100px;
    background-image: url('https://media.pitchfork.com/photos/650de105eacc5b460e151343/master/w_1280%2Cc_limit/Taylor-Swift-1989-Taylors-Version.jpg');
    background-size: cover;
    border-radius: 50%;
    border: 1px solid #fff;
    margin-right: 50px;
}

.settings-row {
    margin-top: 40px;
}

.settings-name {
    font-size: 13px;
    margin-bottom: 10px;
}

.settings-input[type="text"] {
    color: white;
    height: 40px;
    width: 400px;
    background-color: rgba(0,0,0,0.3);
    border: none;
    font-size: 20px;
    padding-left: 20px;
    padding-right: 20px;
    border-radius: 10px;
}

.settings-input[type="button"] {
    color: black;
    height: 40px;
    background-color: rgb(0, 255, 229);
    box-shadow: 0px 1px 3px 3px rgba(0,0,0,0.3);
    border: none;
    font-size: 16px;
    padding-left: 20px;
    padding-right: 20px;
    border-radius: 10px;
}

.settings-input[type="button"]:hover {
    background-color: rgb(160, 255, 245);
    cursor: pointer;
}

.remove-link-button {
    margin-left: 20px;
}

.delete-button {
    background-color: rgba(0, 0, 0, 0.3) !important;
    border: 1px solid salmon !important;
    color: salmon !important;
}

.delete-button:hover {
    background-color: rgba(0, 0, 0, 0.5) !important;
}

.friends-profile-picture {
    width: 50px;
    height: 50px;
    background-color:rgb(0, 255, 229);
    background-size: cover;
    border-radius: 50%;
    border: 1px solid #fff;
    margin-right: 20px;
}

.songs-feed {
    overflow: auto;
}

.song-card {
    width: 60vw;
    min-width: 800px;
    max-width: 1200px;
    background-color: rgba(0,0,0,0.2);
    margin-left: 50px;
    margin-bottom: 50px;
    border-radius: 35px;
    box-shadow: 0px 1px 3px 3px rgba(0,0,0,0.3);
}

.song-info {
    display: flex;
    flex-direction: row;
    max-width: 100%;
    justify-content: flex-start;
    align-items: center;
    flex-wrap: wrap;
}

.song-pp {
    width: 50px;
    height: 50px;
    background-color:rgb(0, 255, 229);
    background-size: cover;
    border-radius: 50%;
    border: 1px solid #fff;
    margin: 20px;
}

.song-title {
    font-size: 20px;
    font-weight: bold;
}

.song-dash {
    width: 15px;
    height: 2px;
    background-color: #fff;
    margin: 12px 10px 10px 10px;
}

.song-artist {
    font-size: 20px;
    color: rgb(0, 255, 229);
    cursor: pointer;
}

.song-visibility {
    font-size: 12px;
    color: #bbb;
    margin-left: 12px;
}

.song-desc {
    margin: 15px 50px 30px 50px;
}

.play-pause-bttn {
    margin: 5px 10px 5px 27px;
    width: 40px;
    height: 40px;
    border: 1px solid black;
    color: black;
    text-align: center;
    line-height: 40px;
    border-radius: 50%;
    font-size: 15px;
    background-color:rgb(0, 255, 229);
    box-shadow: 0px 1px 3px 3px rgba(0,0,0,0.3);
}

.song-playback {
    height: 50px;
    border-radius: 25px;
    background-color: rgba(0,0,0,0.3);
    width: calc(100% - 110px);
    margin: 0px;
    box-shadow: 0px 1px 3px 3px rgba(0,0,0,0.1);
}

.song-modules-title {
    margin: 30px 0px 10px 30px;
    font-weight: bold;
}

.add-module-bttn {
    margin: 5px 10px 5px 27px;
    padding: 0px 30px;
    /* width: 40px; */
    height: 40px;
    border: 1px solid rgb(0, 255, 229);
    color: rgb(0, 255, 229);
    text-align: center;
    line-height: 40px;
    border-radius: 20px;
    font-size: 15px;
    /* background-color:rgb(0, 255, 229); */
    box-shadow: 0px 1px 3px 3px rgba(0,0,0,0.3);
}

.ld-bttn {
    margin: 10px 0px 10px 30px;
    width: 40px;
    height: 40px;
    /* border: 1px solid rgb(0, 255, 229); */
    color: rgb(0, 255, 229);
    text-align: center;
    line-height: 40px;
    border-radius: 20px;
    font-size: 15px;
    /* background-color:rgb(0, 255, 229); */
    /* box-shadow: 0px 1px 3px 3px rgba(0,0,0,0.3); */
}

